Fix sizing and alignment of text contents

--- a/src/components/TeamList.module.scss
+++ b/src/components/TeamList.module.scss
@@ -165,7 +165,7 @@
 
     .overlayCardWrapper {
       pointer-events: all;
-      max-width: min(800px, calc(100%));
+      max-width: min(900px, calc(100%));
       width: 100%;
       max-height: 100%;
       display: flex;
@@ -199,6 +199,7 @@
         border: solid $border $accent;
         background-color: $background;
         padding: 25px;
+        position: relative;
         @media (max-width: 750px) {
           padding: 20px;
         }
@@ -207,7 +208,7 @@
           width: auto;
         }
         height: auto;
-        max-height: min(100%, 70vh);
+        max-height: min(600px, 70vh);
         overflow-y: auto;
         display: block;
         z-index: 100;
@@ -242,10 +243,12 @@
           }
 
           .titleContainer {
+            position: sticky;
+            top: 0;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            align-self: center;
+            align-self: stretch;
             gap: 8px;
             width: auto;
             max-width: 250px;
@@ -273,6 +276,7 @@
             flex-basis: 200px;
             flex-shrink: 1;
             margin: auto 0;
+            font-weight: 500;
             .role {
               color: $accent;
             }
@@ -308,6 +312,7 @@
 
             .titleContainer {
               align-items: center;
+              align-self: center;
               text-align: center;
               .tags {
                 justify-content: center;
